<resources>
    <string name="app_name">ExpertSubmission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_hewan">nama hewan</string>
    <string name="animal_type">animal Type</string>
    <string name="latin_name">latin name</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="habitat">habitat</string>
    <string name="active_time">active time</string>
    <string name="georange">georange</string>
    <string name="title_favorite">Favorite</string>
</resources>