<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/iv_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_baseline_image_24"/>

    <TextView
        android:id="@+id/tv_nama_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_hewan"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detail" />

    <TextView
        android:id="@+id/tv_latin_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latin_name"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_detail" />

    <TextView
        android:id="@+id/tv_habitat_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habitat"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_latin_detail" />

    <TextView
        android:id="@+id/tv_animal_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animal_type"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_habitat_detail" />

    <TextView
        android:id="@+id/tv_active_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_time"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_animal_type" />

    <TextView
        android:id="@+id/tv_geo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/georange"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_active_detail" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/favorite" />







</androidx.constraintlayout.widget.ConstraintLayout>